Rework invite codes for optimization
